Table bullet align css fix

--- a/src/scss/partials/_table.scss
+++ b/src/scss/partials/_table.scss
@@ -70,6 +70,7 @@
 
 .bullet{
 	width: 20px;
+	vertical-align: top;
 }
 
 .sparkline{
